--- a/index.html
+++ b/index.html
@@ -2,18 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
-     <!-- Google verification -->
+    <!-- Page title (IMPORTANT for Google) -->
+    <title>Express Tracker | Track Your Shipments in Real Time</title>
+
+    <!-- SEO Meta Description -->
+    <meta
+      name="description"
+      content="Express Tracker helps you track shipments and delivery status in real time with fast, simple, and reliable parcel tracking."
+    />
+
+    <!-- Google verification -->
     <meta name="google-site-verification" content="8kNvgEoj_Vwsm52Mp4YvQqVf_kB3FyJ8Kbi_qlE76Mg" /> 
 
+    <!-- Search engine instructions -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Responsive layout -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
   </head>
 
   <body>
@@ -22,29 +37,24 @@
     <!-- Vite / React entry file -->
     <script type="module" src="/src/main.jsx"></script>
 
-    <!-- Disable right click & keyboard shortcuts -->
+    <!-- Disable right click & keyboard shortcuts (optional) -->
     <script>
       // Disable right click
       document.addEventListener("contextmenu", function (e) {
         e.preventDefault();
-        alert("Right click is disabled");
       });
 
       // Disable keyboard shortcuts
       document.addEventListener("keydown", function (e) {
-        // Ctrl + C, V, U
         if (
           e.ctrlKey &&
           (e.key === "c" || e.key === "v" || e.key === "u")
         ) {
           e.preventDefault();
-          alert("This function is not allowed");
         }
 
-        // F6
         if (e.key === "F6") {
           e.preventDefault();
-          alert("This function is not allowed");
         }
       });
     </script>
